[gd_scene load_steps=3 format=3 uid="uid://bhaie0j4aahet"]

[ext_resource type="Script" uid="uid://cmo62foi2nw1g" path="res://scenes/Multiplayer.gd" id="1_o1atq"]
[ext_resource type="Material" uid="uid://bt4rqg6jn0r5v" path="res://new_shader_material.tres" id="2_5gu6x"]

[node name="lobby" type="Node2D" node_paths=PackedStringArray("HostButton", "JoinButton", "LobbyInfo", "LobbyId_getter", "TakeCard", "PlayerList", "PlayerName_getter", "PINGME")]
script = ExtResource("1_o1atq")
HostButton = NodePath("HostButton")
JoinButton = NodePath("JoinButton")
LobbyInfo = NodePath("LobbyInfo")
LobbyId_getter = NodePath("LobbyId_getter")
TakeCard = NodePath("TakeCard")
PlayerList = NodePath("PlayerList")
PlayerName_getter = NodePath("PlayerName_getter")
PINGME = NodePath("PING")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("2_5gu6x")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1154.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinButton" type="Button" parent="."]
offset_left = 556.0
offset_top = 52.0
offset_right = 629.0
offset_bottom = 89.0
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="HostButton" type="Button" parent="."]
offset_left = 556.0
offset_top = 102.0
offset_right = 630.0
offset_bottom = 139.0
text = "Host"
metadata/_edit_use_anchors_ = true

[node name="LobbyInfo" type="Label" parent="."]
offset_left = 4.0
offset_top = 2.0
offset_right = 451.0
offset_bottom = 218.0
metadata/_edit_use_anchors_ = true

[node name="LobbyId_getter" type="LineEdit" parent="."]
offset_left = 639.0
offset_top = 56.0
offset_right = 1091.0
offset_bottom = 87.0
metadata/_edit_use_anchors_ = true

[node name="EnterLobbyId" type="Label" parent="."]
offset_left = 639.0
offset_top = 23.0
offset_right = 757.0
offset_bottom = 46.0
text = "Enter Lobby ID:"
metadata/_edit_use_anchors_ = true

[node name="PlayerList" type="ItemList" parent="."]
offset_left = 558.0
offset_top = 150.0
offset_right = 1093.0
offset_bottom = 613.0
metadata/_edit_use_anchors_ = true

[node name="TakeCard" type="Button" parent="."]
offset_left = 556.0
offset_top = 617.0
offset_right = 1094.0
offset_bottom = 646.0
text = "Take Card!"

[node name="PlayerName_label" type="Label" parent="."]
offset_left = 94.0
offset_top = 33.0
offset_right = 191.0
offset_bottom = 82.0
text = "Enter Name:
"

[node name="PlayerName_getter" type="LineEdit" parent="."]
offset_left = 96.0
offset_top = 55.0
offset_right = 548.0
offset_bottom = 86.0
metadata/_edit_use_anchors_ = true

[node name="PING" type="Button" parent="."]
offset_left = 128.0
offset_top = 255.0
offset_right = 289.0
offset_bottom = 414.0
text = "Ping Button
"

[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="TakeCard" to="." method="_on_take_card_pressed"]
[connection signal="pressed" from="PING" to="." method="_on_ping_pressed"]
